[package]
name = "eigenchart"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
color = "0.3.1"
#csv = "1.3.1"
#num-traits = "0.2.19"
rust_decimal = "1.37.1"
#serde = { version = "1.0.219", features = ["derive"] }
#toml = "0.8.22"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter","fmt","std","ansi","chrono"]}
#uuid = { version = "1.17.0", features = ["serde", "v7", "v4"] }

[profile.release]
overflow-checks =  true
